--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
   </footer>
 </div>
 <script src="Glider.js-master/glider.min.js"></script>
- <script src="main.js"></script>   
+ <script src="app.js"></script>   
 </main>
 </body>
 </html>
