--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
    </div>
    <h1 id="ftiphonesTitle">Featured iPhone Accessories</h1>
    <div class="ftiphones">
+    <button class="glider-prev"><i class="fas fa-chevron-circle-left"></i></button>
+    <div class="glider">
     <div class="siliconCase">
         <div><img src="pics/iPhone14WithSiliconCasePurple.png" alt=""></div>
       <div class="new"><p>New</p></div>
@@ -95,28 +97,100 @@
         <span class="dot1"id="circle16"></span>
       </div>
     </div>
-    <div class="magsafecharger">
-       <div> <img src="pics/magSafeCharger.png" alt=""></div>
-       <div class="description2"><h3><a href="https://www.apple.com/shop/product/MHXH3AM/A/magsafe-charger?fnode=0ab51bb8557cdcf270df519d610c9fcd37c7f2a8ccfd528eac165e1053db66ea035b24ed8785973b53624f4d94b519bf8fbeed46fa4d9ffd3e0b3f446844ffa74356f2f350a8137264c0f5f868605155e5dba078f6e598eecc9bf24a2512b4b8">MagSafe Charger</a></h3></div>
-    <div class="price2"><p>$39.00</p></div>
-      </div>
-    <div class="leatherCase">
-       <div> <img src="pics/iPhone14WithLeatherCaseBlack.png" alt=""></div>
-       <div class="new"><p>New</p></div>
-      <div class="description"><a href="https://www.apple.com/shop/product/MPPP3ZM/A/iphone-14-pro-max-leather-case-with-magsafe-ink?fnode=a038bbca9b110dbd4f74d1dfbde354a96b5fbebfeb024b52f8efd97781645e3be7afc96ea3b947c07d2bd03b39ba52e2b4f02442595bd25efc130769e1238ccef2a4222b932debf44c8032396e56d55511336f14108030b63f480d453d609c4b"><p><b> iPhone 14 Pro Max Leather Case with </b></p>
-      <p><b> MagSafe - Ink</b></p></a></div>
-      <div class="price"><p>$49.00</p></div>
-      <div class="circles1">
-        <span class="dot1" id="circle21"></span>
-        <span class="dot1"id="circle22"></span>
-        <span class="dot1"id="circle23"></span>
-        <span class="dot1"id="circle24"></span>
-        <span class="dot1"id="circle25"></span>
-      
-      </div>
+    <div class="siliconCase">
+      <div><img src="pics/iPhone14WithSiliconCasePurple.png" alt=""></div>
+    <div class="new"><p>New</p></div>
+    <div class="description"><a href="https://www.apple.com/shop/product/MPRY3ZM/A/Iphone-14-silicone-case-with-magsafe-lilac?fnode=0ab51bb8557cdcf270df519d610c9fcd37c7f2a8ccfd528eac165e1053db66ea035b24ed8785973b53624f4d94b519bf8fbeed46fa4d9ffd3e0b3f446844ffa74356f2f350a8137264c0f5f868605155e5dba078f6e598eecc9bf24a2512b4b8"><p><b> iPhone 14 Silicon with MagSafe</b></p>
+    <p><b> Lilac</b></p></a></div>
+    <div class="price"><p>$49.00</p></div>
+    <div class="circles1">
+      <span class="dot1" id="circle11"></span>
+      <span class="dot1"id="circle12"></span>
+      <span class="dot1"id="circle13"></span>
+      <span class="dot1"id="circle14"></span>
+      <span class="dot1"id="circle15"></span>
+      <span class="dot1"id="circle16"></span>
     </div>
-  
-   </div>
+  </div>
+  <div class="siliconCase">
+    <div><img src="pics/iPhone14WithSiliconCasePurple.png" alt=""></div>
+  <div class="new"><p>New</p></div>
+  <div class="description"><a href="https://www.apple.com/shop/product/MPRY3ZM/A/Iphone-14-silicone-case-with-magsafe-lilac?fnode=0ab51bb8557cdcf270df519d610c9fcd37c7f2a8ccfd528eac165e1053db66ea035b24ed8785973b53624f4d94b519bf8fbeed46fa4d9ffd3e0b3f446844ffa74356f2f350a8137264c0f5f868605155e5dba078f6e598eecc9bf24a2512b4b8"><p><b> iPhone 14 Silicon with MagSafe</b></p>
+  <p><b> Lilac</b></p></a></div>
+  <div class="price"><p>$49.00</p></div>
+  <div class="circles1">
+    <span class="dot1" id="circle11"></span>
+    <span class="dot1"id="circle12"></span>
+    <span class="dot1"id="circle13"></span>
+    <span class="dot1"id="circle14"></span>
+    <span class="dot1"id="circle15"></span>
+    <span class="dot1"id="circle16"></span>
+  </div>
+</div>
+    <div class="siliconCase">
+      <div><img src="pics/iPhone14WithSiliconCasePurple.png" alt=""></div>
+    <div class="new"><p>New</p></div>
+    <div class="description"><a href="https://www.apple.com/shop/product/MPRY3ZM/A/Iphone-14-silicone-case-with-magsafe-lilac?fnode=0ab51bb8557cdcf270df519d610c9fcd37c7f2a8ccfd528eac165e1053db66ea035b24ed8785973b53624f4d94b519bf8fbeed46fa4d9ffd3e0b3f446844ffa74356f2f350a8137264c0f5f868605155e5dba078f6e598eecc9bf24a2512b4b8"><p><b> iPhone 14 Silicon with MagSafe</b></p>
+    <p><b> Lilac</b></p></a></div>
+    <div class="price"><p>$49.00</p></div>
+    <div class="circles1">
+      <span class="dot1" id="circle11"></span>
+      <span class="dot1"id="circle12"></span>
+      <span class="dot1"id="circle13"></span>
+      <span class="dot1"id="circle14"></span>
+      <span class="dot1"id="circle15"></span>
+      <span class="dot1"id="circle16"></span>
+    </div>
+  </div>
+  <div class="siliconCase">
+    <div><img src="pics/iPhone14WithSiliconCasePurple.png" alt=""></div>
+  <div class="new"><p>New</p></div>
+  <div class="description"><a href="https://www.apple.com/shop/product/MPRY3ZM/A/Iphone-14-silicone-case-with-magsafe-lilac?fnode=0ab51bb8557cdcf270df519d610c9fcd37c7f2a8ccfd528eac165e1053db66ea035b24ed8785973b53624f4d94b519bf8fbeed46fa4d9ffd3e0b3f446844ffa74356f2f350a8137264c0f5f868605155e5dba078f6e598eecc9bf24a2512b4b8"><p><b> iPhone 14 Silicon with MagSafe</b></p>
+  <p><b> Lilac</b></p></a></div>
+  <div class="price"><p>$49.00</p></div>
+  <div class="circles1">
+    <span class="dot1" id="circle11"></span>
+    <span class="dot1"id="circle12"></span>
+    <span class="dot1"id="circle13"></span>
+    <span class="dot1"id="circle14"></span>
+    <span class="dot1"id="circle15"></span>
+    <span class="dot1"id="circle16"></span>
+  </div>
+</div>
+<div class="siliconCase">
+  <div><img src="pics/iPhone14WithSiliconCasePurple.png" alt=""></div>
+<div class="new"><p>New</p></div>
+<div class="description"><a href="https://www.apple.com/shop/product/MPRY3ZM/A/Iphone-14-silicone-case-with-magsafe-lilac?fnode=0ab51bb8557cdcf270df519d610c9fcd37c7f2a8ccfd528eac165e1053db66ea035b24ed8785973b53624f4d94b519bf8fbeed46fa4d9ffd3e0b3f446844ffa74356f2f350a8137264c0f5f868605155e5dba078f6e598eecc9bf24a2512b4b8"><p><b> iPhone 14 Silicon with MagSafe</b></p>
+<p><b> Lilac</b></p></a></div>
+<div class="price"><p>$49.00</p></div>
+<div class="circles1">
+  <span class="dot1" id="circle11"></span>
+  <span class="dot1"id="circle12"></span>
+  <span class="dot1"id="circle13"></span>
+  <span class="dot1"id="circle14"></span>
+  <span class="dot1"id="circle15"></span>
+  <span class="dot1"id="circle16"></span>
+</div>
+</div>
+<div class="siliconCase">
+  <div><img src="pics/iPhone14WithSiliconCasePurple.png" alt=""></div>
+<div class="new"><p>New</p></div>
+<div class="description"><a href="https://www.apple.com/shop/product/MPRY3ZM/A/Iphone-14-silicone-case-with-magsafe-lilac?fnode=0ab51bb8557cdcf270df519d610c9fcd37c7f2a8ccfd528eac165e1053db66ea035b24ed8785973b53624f4d94b519bf8fbeed46fa4d9ffd3e0b3f446844ffa74356f2f350a8137264c0f5f868605155e5dba078f6e598eecc9bf24a2512b4b8"><p><b> iPhone 14 Silicon with MagSafe</b></p>
+<p><b> Lilac</b></p></a></div>
+<div class="price"><p>$49.00</p></div>
+<div class="circles1">
+  <span class="dot1" id="circle11"></span>
+  <span class="dot1"id="circle12"></span>
+  <span class="dot1"id="circle13"></span>
+  <span class="dot1"id="circle14"></span>
+  <span class="dot1"id="circle15"></span>
+  <span class="dot1"id="circle16"></span>
+</div>
+</div>
+    </div>
+    <button class="glider-next"><i class="fas fa-chevron-circle-right"></i></button>
+   <div role="tablist" class="dots"></div>
+  </div>
    <div class="circles">
     <span class="dot"></span>
     <span class="dot"></span>
@@ -211,8 +285,12 @@
   </div>
   <h1 class="sound">Sound Essentials</h1>
   <div class="soundessentials">
+    <button class="glider-prev"><i class="fas fa-chevron-circle-left"></i></button>
+    <div class="glider">
+   
+    
     <div class="airpodspro">
-<img src="pics/airpodspro.png" alt="">
+<img src="pics/airpodspro.png" alt="" >
     </div>
     <div class="homepod">
 <img src="pics/homepod-mini-select-blue-202110.png" alt="">
@@ -220,7 +298,28 @@
     <div class="bitsfitpro">
 <img src="pics/beatsfitpro.png" alt="">
     </div>
+    <div class="airpodspro">
+        <img src="pics/airpodspro.png" alt="">
+            </div>
+            <div class="homepod">
+        <img src="pics/Elderberry sport Loop.png" alt="">
+            </div>
+            <div class="bitsfitpro">
+        <img src="pics/beatsfitpro.png" alt="">
+            </div>
+            <div class="airpodspro">
+                <img src="pics/airtag leather key ring.png" alt="" >
+                    </div>
+                    <div class="homepod">
+                <img src="pics/airtag leather key ring.png" alt="">
+                    </div>
+                    <div class="bitsfitpro">
+                <img src="pics/magSafeCharger.png" alt="">
+                    </div>
   </div>
+  <button class="glider-next"><i class="fas fa-chevron-circle-right"></i></button>
+  <div role="tablist" class="dots"></div>
+</div>
   <div class="circles">
     <span class="dot"></span>
     <span class="dot"></span>
