--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
         <nav class="navbar">
             <div class="navbar-links">
             <ul>
-                <li><a href="#"><i class="fa-brands fa-apple"></i></a></li>
-                <li><a href="#">Store</a></li>
-                <li><a href="#">Mac</a></li>
-                <li><a href="#">iPad</a></li>
-                <li><a href="#">iPhone</a></li>
-                <li><a href="#">Watch</a></li>
-                <li><a href="#">Airpods</a></li>
-                <li><a href="#">TV & Home</a></li>
-                <li><a href="#">Only on Apple</a></li>
-                <li><a href="#">Accessories</a></li>
-                <li><a href="#">Support</a></li>
-                <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
+                <li><a href="https://www.apple.com/"><i class="fa-brands fa-apple"></i></a></li>
+                <li><a href="https://www.apple.com/store">Store</a></li>
+                <li><a href="https://www.apple.com/mac/">Mac</a></li>
+                <li><a href="https://www.apple.com/ipad/">iPad</a></li>
+                <li><a href="https://www.apple.com/iphone/">iPhone</a></li>
+                <li><a href="https://www.apple.com/watch/">Watch</a></li>
+                <li><a href="https://www.apple.com/airpods/">Airpods</a></li>
+                <li><a href="https://www.apple.com/tv-home/">TV & Home</a></li>
+                <li><a href="https://www.apple.com/services/">Only on Apple</a></li>
+                <li><a href="https://www.apple.com/shop/accessories/all">Accessories</a></li>
+                <li><a href="https://www.apple.com/shop/accessories/all">Support</a></li>
+                <li><a href="https://www.apple.com/search"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                <li><a href="https://www.apple.com/search"><i class="fa-solid fa-bag-shopping"></i></a></li>
             </ul>
         </div>
         </nav>
@@ -38,7 +38,7 @@
    <div class="navbar2">
     <div class="acce">
         <ul>
-            <li><a href="#"><b> Accessories</b></a></li>
+            <li><a href="https://www.apple.com/shop/accessories/all"><b> Accessories</b></a></li>
         </ul>
     </div>
     <div class="browse">
@@ -98,55 +98,52 @@
       </div>
     </div>
     <div class="siliconCase">
-      <div><img src="pics/iPhone14WithSiliconCasePurple.png" alt=""></div>
-    <div class="new"><p>New</p></div>
-    <div class="description"><a href="https://www.apple.com/shop/product/MPRY3ZM/A/Iphone-14-silicone-case-with-magsafe-lilac?fnode=0ab51bb8557cdcf270df519d610c9fcd37c7f2a8ccfd528eac165e1053db66ea035b24ed8785973b53624f4d94b519bf8fbeed46fa4d9ffd3e0b3f446844ffa74356f2f350a8137264c0f5f868605155e5dba078f6e598eecc9bf24a2512b4b8"><p><b> iPhone 14 Silicon with MagSafe</b></p>
-    <p><b> Lilac</b></p></a></div>
-    <div class="price"><p>$49.00</p></div>
-    <div class="circles1">
-      <span class="dot1" id="circle11"></span>
-      <span class="dot1"id="circle12"></span>
-      <span class="dot1"id="circle13"></span>
-      <span class="dot1"id="circle14"></span>
-      <span class="dot1"id="circle15"></span>
-      <span class="dot1"id="circle16"></span>
-    </div>
+      <div><img src="pics/magSafeCharger.png" alt=""></div>
+    <p class="invisible">.</p>
+    <div class="description"><a href="https://www.apple.com/shop/product/MHXH3AM/A/magsafe-charger?fnode=d488ac52ec7831153f71acb0cb333f3a318659ef707c3a87649adde7185623b71b55446b2705a9ffb7a030cef8bc0391bcfa7ce6733fef14448bed319322bcaf588d071d3de4282d85a8bfbd0c3c461dfb55ed4dcf21ef0a40600c0b66e47de6"><p><b> MagSafe Charger</b></p>
+    </a></div>
+    <p class="invisible">.</p>
+    <div class="price"><p>$39.00</p></div>
+    <p class="invisible">.</p>
+    <p class="invisible">.</p>
   </div>
   <div class="siliconCase">
-    <div><img src="pics/iPhone14WithSiliconCasePurple.png" alt=""></div>
+    <div><img src="pics/iPhone14WithLeatherCaseBlack.png" alt=""></div>
   <div class="new"><p>New</p></div>
-  <div class="description"><a href="https://www.apple.com/shop/product/MPRY3ZM/A/Iphone-14-silicone-case-with-magsafe-lilac?fnode=0ab51bb8557cdcf270df519d610c9fcd37c7f2a8ccfd528eac165e1053db66ea035b24ed8785973b53624f4d94b519bf8fbeed46fa4d9ffd3e0b3f446844ffa74356f2f350a8137264c0f5f868605155e5dba078f6e598eecc9bf24a2512b4b8"><p><b> iPhone 14 Silicon with MagSafe</b></p>
-  <p><b> Lilac</b></p></a></div>
+  <div class="description"><a href="https://www.apple.com/shop/product/MPPP3ZM/A/iphone-14-pro-max-leather-case-with-magsafe-ink?fnode=d488ac52ec7831153f71acb0cb333f3a318659ef707c3a87649adde7185623b71b55446b2705a9ffb7a030cef8bc0391bcfa7ce6733fef14448bed319322bcaf588d071d3de4282d85a8bfbd0c3c461dfb55ed4dcf21ef0a40600c0b66e47de6"><p><b> iPhone 14 Pro Max Leather Case with</b></p>
+  <p><b> MagSafe - Ink</b></p></a></div>
   <div class="price"><p>$49.00</p></div>
   <div class="circles1">
-    <span class="dot1" id="circle11"></span>
-    <span class="dot1"id="circle12"></span>
-    <span class="dot1"id="circle13"></span>
-    <span class="dot1"id="circle14"></span>
-    <span class="dot1"id="circle15"></span>
-    <span class="dot1"id="circle16"></span>
+    <span class="dot1" id="circle21"></span>
+    <span class="dot1"id="circle22"></span>
+    <span class="dot1"id="circle23"></span>
+    <span class="dot1"id="circle24"></span>
+    <span class="dot1"id="circle25"></span>
+    <span class="dot1"id="circle26"></span>
   </div>
 </div>
     <div class="siliconCase">
-      <div><img src="pics/iPhone14WithSiliconCasePurple.png" alt=""></div>
+      <div><img src="pics/leatherWallet.png" alt=""></div>
     <div class="new"><p>New</p></div>
-    <div class="description"><a href="https://www.apple.com/shop/product/MPRY3ZM/A/Iphone-14-silicone-case-with-magsafe-lilac?fnode=0ab51bb8557cdcf270df519d610c9fcd37c7f2a8ccfd528eac165e1053db66ea035b24ed8785973b53624f4d94b519bf8fbeed46fa4d9ffd3e0b3f446844ffa74356f2f350a8137264c0f5f868605155e5dba078f6e598eecc9bf24a2512b4b8"><p><b> iPhone 14 Silicon with MagSafe</b></p>
-    <p><b> Lilac</b></p></a></div>
-    <div class="price"><p>$49.00</p></div>
+    <div class="description"><a href="https://www.apple.com/shop/product/MPPT3ZM/A/iphone-leather-wallet-with-magsafe-forest-green?fnode=d488ac52ec7831153f71acb0cb333f3a318659ef707c3a87649adde7185623b71b55446b2705a9ffb7a030cef8bc0391bcfa7ce6733fef14448bed319322bcaf588d071d3de4282d85a8bfbd0c3c461dfb55ed4dcf21ef0a40600c0b66e47de6"><p><b> iPhone Leather Wallet with MagSafe -</b></p>
+    <p><b> Forest Green</b></p></a></div>
+    <div class="price"><p>$59.00</p></div>
     <div class="circles1">
-      <span class="dot1" id="circle11"></span>
-      <span class="dot1"id="circle12"></span>
-      <span class="dot1"id="circle13"></span>
-      <span class="dot1"id="circle14"></span>
-      <span class="dot1"id="circle15"></span>
-      <span class="dot1"id="circle16"></span>
+      <span class="dot1" id="circle21"></span>
+      <span class="dot1"id="circle22"></span>
+      <span class="dot1"id="circle23"></span>
+      <span class="dot1"id="circle24"></span>
+      <span class="dot1"id="circle25"></span>
+      <span class="dot1"id="circle26"></span>
     </div>
   </div>
   <div class="siliconCase">
-    <div><img src="pics/iPhone14WithSiliconCasePurple.png" alt=""></div>
-  <div class="new"><p>New</p></div>
-  <div class="description"><a href="https://www.apple.com/shop/product/MPRY3ZM/A/Iphone-14-silicone-case-with-magsafe-lilac?fnode=0ab51bb8557cdcf270df519d610c9fcd37c7f2a8ccfd528eac165e1053db66ea035b24ed8785973b53624f4d94b519bf8fbeed46fa4d9ffd3e0b3f446844ffa74356f2f350a8137264c0f5f868605155e5dba078f6e598eecc9bf24a2512b4b8"><p><b> iPhone 14 Silicon with MagSafe</b></p>
-  <p><b> Lilac</b></p></a></div>
+    <div><img src="pics/clearCase14.png" alt=""></div>
+    <!-- <p class="invisible">.</p> -->
+    <div class="new"><p>New</p></div>
+  <div class="description"><a href="https://www.apple.com/shop/product/MPPT3ZM/A/iphone-leather-wallet-with-magsafe-forest-green?fnode=d488ac52ec7831153f71acb0cb333f3a318659ef707c3a87649adde7185623b71b55446b2705a9ffb7a030cef8bc0391bcfa7ce6733fef14448bed319322bcaf588d071d3de4282d85a8bfbd0c3c461dfb55ed4dcf21ef0a40600c0b66e47de6"><p><b> iPhone 14 Pro Clear Case with MagSafe</b></p>
+  </a></div>
+  
   <div class="price"><p>$49.00</p></div>
   <div class="circles1">
     <span class="dot1" id="circle11"></span>
@@ -158,10 +155,19 @@
   </div>
 </div>
 <div class="siliconCase">
-  <div><img src="pics/iPhone14WithSiliconCasePurple.png" alt=""></div>
+    <div><img src="pics/powerAdapter.png" alt=""></div>
+  <p class="invisible">.</p>
+  <div class="description"><a href="https://www.apple.com/shop/product/MHJA3AM/A/20w-usb-c-power-adapter?fnode=d488ac52ec7831153f71acb0cb333f3a318659ef707c3a87649adde7185623b71b55446b2705a9ffb7a030cef8bc0391bcfa7ce6733fef14448bed319322bcaf588d071d3de4282d85a8bfbd0c3c461dfb55ed4dcf21ef0a40600c0b66e47de6"><p><b> 20 USB-C Power Adapter</b></p>
+  </a></div>
+  <p class="invisible">.</p>
+  <div class="price"><p>$19.00</p></div>
+  <p class="invisible">.</p>
+</div>
+<div class="siliconCase">
+  <div><img src="pics/scwithMagSafe.png" alt=""></div>
 <div class="new"><p>New</p></div>
-<div class="description"><a href="https://www.apple.com/shop/product/MPRY3ZM/A/Iphone-14-silicone-case-with-magsafe-lilac?fnode=0ab51bb8557cdcf270df519d610c9fcd37c7f2a8ccfd528eac165e1053db66ea035b24ed8785973b53624f4d94b519bf8fbeed46fa4d9ffd3e0b3f446844ffa74356f2f350a8137264c0f5f868605155e5dba078f6e598eecc9bf24a2512b4b8"><p><b> iPhone 14 Silicon with MagSafe</b></p>
-<p><b> Lilac</b></p></a></div>
+<div class="description"><a href="https://www.apple.com/shop/product/MPTC3ZM/A/Iphone-14-plus-silicone-case-with-magsafe-succulent?fnode=d488ac52ec7831153f71acb0cb333f3a318659ef707c3a87649adde7185623b71b55446b2705a9ffb7a030cef8bc0391bcfa7ce6733fef14448bed319322bcaf588d071d3de4282d85a8bfbd0c3c461dfb55ed4dcf21ef0a40600c0b66e47de6"><p><b> iPhone 14 Plus Silicon Case with</b></p>
+<p><b> MagSafe - Succulent</b></p></a></div>
 <div class="price"><p>$49.00</p></div>
 <div class="circles1">
   <span class="dot1" id="circle11"></span>
@@ -173,161 +179,43 @@
 </div>
 </div>
 <div class="siliconCase">
-  <div><img src="pics/iPhone14WithSiliconCasePurple.png" alt=""></div>
-<div class="new"><p>New</p></div>
-<div class="description"><a href="https://www.apple.com/shop/product/MPRY3ZM/A/Iphone-14-silicone-case-with-magsafe-lilac?fnode=0ab51bb8557cdcf270df519d610c9fcd37c7f2a8ccfd528eac165e1053db66ea035b24ed8785973b53624f4d94b519bf8fbeed46fa4d9ffd3e0b3f446844ffa74356f2f350a8137264c0f5f868605155e5dba078f6e598eecc9bf24a2512b4b8"><p><b> iPhone 14 Silicon with MagSafe</b></p>
-<p><b> Lilac</b></p></a></div>
-<div class="price"><p>$49.00</p></div>
-<div class="circles1">
-  <span class="dot1" id="circle11"></span>
-  <span class="dot1"id="circle12"></span>
-  <span class="dot1"id="circle13"></span>
-  <span class="dot1"id="circle14"></span>
-  <span class="dot1"id="circle15"></span>
-  <span class="dot1"id="circle16"></span>
+    <div><img src="pics/magsafeduoCharger.png" alt=""></div>
+  <p class="invisible">.</p>
+  <div class="description"><a href="https://www.apple.com/shop/product/MHXF3AM/A/magsafe-duo-charger?fnode=d488ac52ec7831153f71acb0cb333f3a318659ef707c3a87649adde7185623b71b55446b2705a9ffb7a030cef8bc0391bcfa7ce6733fef14448bed319322bcaf588d071d3de4282d85a8bfbd0c3c461dfb55ed4dcf21ef0a40600c0b66e47de6"><p><b> MagSafe Duo Charger</b></p>
+  </a></div>
+  <p class="invisible">.</p>
+  <div class="price"><p>$129.00</p></div>
+  <p class="invisible">.</p>
 </div>
+<div class="siliconCase">
+    <div><img src="pics/otterbox.png" alt=""></div>
+  <div class="new"><p>New</p></div>
+  <div class="description"><a href="https://www.apple.com/shop/product/HQ4V2ZM/A/otterbox-lumen-series-case-with-magsafe-for-iphone-14-pro-blue?fnode=d488ac52ec7831153f71acb0cb333f3a318659ef707c3a87649adde7185623b71b55446b2705a9ffb7a030cef8bc0391bcfa7ce6733fef14448bed319322bcaf588d071d3de4282d85a8bfbd0c3c461dfb55ed4dcf21ef0a40600c0b66e47de6"><p><b> OtterBox Lumen Series Case with</b></p>
+  <p><b> MagSafe for iPhone 14 Pro - Blue</b></p></a></div>
+  <div class="price"><p>$49.95</p></div>
+  <div class="circles1">
+    <span class="dot1" id="circle31"></span>
+    <span class="dot1"id="circle32"></span>
+    <span class="dot1"id="circle33"></span>
+    <span class="dot1"id="circle34"></span> 
+  </div>
 </div>
     </div>
     <button class="glider-next"><i class="fas fa-chevron-circle-right"></i></button>
-   <div role="tablist" class="dots"></div>
+   
   </div>
-   <div class="circles">
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-  </div>
+  <div role="tablist" class="dots"></div>
+   
   <div class="shop">
     <li><a href="#">Shop all iPhone accessories <i class="fa-solid fa-chevron-right"></i> </a></li>
   </div>
-  <h1 class="applewatchtitle">Apple Watch Bands</h1>
-<div class="watchbands">
+  <!-- <h1 class="applewatchtitle">Apple Watch Bands</h1> -->
 
-  <div class="starlight">
 
-<div><img src="pics/star light sport brand.png" alt=""></div>
-<div class="new"><p>New</p></div>
-<div class="description"><a href="https://www.apple.com/shop/product/MPLR3AM/A/41mm-starlight-sport-band-m-l?fnode=9445495919fe6d33a0b90dd1adda72e999cb7065fc378701d987c5813602e3b3f8a966f53d2ffd4b5d1572d78a24fbfc972eaea8e305a9ab862d588dfdc84eb997278ffd580bf615405c0b7c10f454886d881201004f6b58a02ae207aa489ef6"><p><b> Starlight Sport Band </b></p>
-<p id="period"><b> .</b></p></a></div>
-<div class="price"><p>$49.00</p></div>
-<div class="circles1">
-  <span class="dot1" id="circle31"></span>
-  <span class="dot1"id="circle32"></span>
-  <span class="dot1"id="circle33"></span>
-  <span class="dot1"id="circle34"></span>
-  <span class="dot1"id="circle35"></span>
-  <span class="dot1"id="circle36"></span>
-
-</div>
-  </div>
-  <div class="elderberry">
-<div><img src="pics/Elderberry sport Loop.png" alt=""></div>
-<div class="new"><p>New</p></div>
-<div class="description"><a href="https://www.apple.com/shop/product/MPLD3AM/A/45mm-elderberry-sport-loop?fnode=9445495919fe6d33a0b90dd1adda72e999cb7065fc378701d987c5813602e3b3f8a966f53d2ffd4b5d1572d78a24fbfc972eaea8e305a9ab862d588dfdc84eb997278ffd580bf615405c0b7c10f454886d881201004f6b58a02ae207aa489ef6"><p><b> Elderberry Sport Loop</b></p>
-<p id="period"><b> .</b></p></a></div>
-<div class="price"><p>$49.00</p></div>
-<div class="circles1">
-  <span class="dot1" id="circle41"></span>
-  <span class="dot1"id="circle42"></span>
-  <span class="dot1"id="circle43"></span>
-  <span class="dot1"id="circle44"></span>
-  <span class="dot1"id="circle45"></span>
-  <span class="dot1"id="circle46"></span>
-
-</div>
-  </div>
-  <div class="rainforest">
-<div><img src="pics/rainforest braided solo loop.png" alt=""></div>
-<div class="new"><p>New</p></div>
-<div class="description"><a href="https://www.apple.com/shop/product/MPAJ3AM/A/45mm-rainforest-braided-solo-loop-size-7?fnode=9445495919fe6d33a0b90dd1adda72e999cb7065fc378701d987c5813602e3b3f8a966f53d2ffd4b5d1572d78a24fbfc972eaea8e305a9ab862d588dfdc84eb997278ffd580bf615405c0b7c10f454886d881201004f6b58a02ae207aa489ef6"><p><b> Rainforest Braided Solo Loop </b></p>
-<p id="period"><b> .</b></p></a></div>
-<div class="price"><p>$99.00</p></div>
-<div class="circles1">
-  <span class="dot1" id="circle51"></span>
-  <span class="dot1"id="circle52"></span>
-  <span class="dot1"id="circle53"></span>
-  <span class="dot1"id="circle54"></span>
-  <span class="dot1"id="circle55"></span>
-  <span class="dot1"id="circle56"></span>
-
-</div>
-  </div>
-</div>
-<div class="circles">
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-  </div>
-  <div class="shop">
+  <!-- <div class="shop">
     <li><a href="#">Shop all iPhone Bands <i class="fa-solid fa-chevron-right"></i> </a></li>
-  </div>
-  <h1 class="airtagtitle">AirTag</h1>
-  <div class="airtags">
-    <div class="airtag">
-        <img src="pics/airtag.png" alt="">
-    </div>
-    <div class="airtag4pack">
-        <img src="pics/airtag-4pack-select-202104.png" alt="">
-    </div>
-    <div class="airtagleather">
-        <img src="pics/airtag leather key ring.png" alt="">
-    </div>
-  </div>
-  <div class="circles">
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-  </div>
-  <div class="shop">
-    <li><a href="#">Shop AirTag<i class="fa-solid fa-chevron-right"></i> </a></li>
-  </div>
-  <h1 class="sound">Sound Essentials</h1>
-  <div class="soundessentials">
-    <button class="glider-prev"><i class="fas fa-chevron-circle-left"></i></button>
-    <div class="glider">
-   
-    
-    <div class="airpodspro">
-<img src="pics/airpodspro.png" alt="" >
-    </div>
-    <div class="homepod">
-<img src="pics/homepod-mini-select-blue-202110.png" alt="">
-    </div>
-    <div class="bitsfitpro">
-<img src="pics/beatsfitpro.png" alt="">
-    </div>
-    <div class="airpodspro">
-        <img src="pics/airpodspro.png" alt="">
-            </div>
-            <div class="homepod">
-        <img src="pics/Elderberry sport Loop.png" alt="">
-            </div>
-            <div class="bitsfitpro">
-        <img src="pics/beatsfitpro.png" alt="">
-            </div>
-            <div class="airpodspro">
-                <img src="pics/airtag leather key ring.png" alt="" >
-                    </div>
-                    <div class="homepod">
-                <img src="pics/airtag leather key ring.png" alt="">
-                    </div>
-                    <div class="bitsfitpro">
-                <img src="pics/magSafeCharger.png" alt="">
-                    </div>
-  </div>
-  <button class="glider-next"><i class="fas fa-chevron-circle-right"></i></button>
-  <div role="tablist" class="dots"></div>
-</div>
-  <div class="circles">
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-  </div>
-  <div class="shop">
-    <li><a href="#">Shop Headphones and Speakers<i class="fa-solid fa-chevron-right"></i> </a></li>
-  </div>
+  </div> -->
+
   <footer class="footer">
     <div class="containerfooterpics">
         <div class="fastdelivery">
