--- a/index.html
+++ b/index.html
@@ -47,7 +47,20 @@
         </ul>
     </div>
    </div>
-
+<!-- <div class="background">
+  <div class="info">
+    <div class="h1-mix"><h1 class="mix">Mix. Match. MagSafe. </h1>
+   </div>
+    <div class="introp"><p>Snap on a case, wallet,wireless charger, or battery pack</p></div>
+    <div class="shop1">
+      <li><a href="#">Shop MagSafe<i class="fa-solid fa-chevron-right"></i> </a></li>
+    </div>
+  </div>
+  <div class="magsafeimage1">
+    <div> 
+      <img src="pics/magsafe-202209.jpg" alt="" width="1440" height="480" data-scale-inital="2"></div>
+  </div>
+</div> -->
    
    <div class="searchbar">
     <div class="title">
@@ -60,24 +73,7 @@
     </div>
    </div>
 
-   <div class="browse1">
-    <div class="product">
-       <li> <a href="#">Browse by product</a></li>
-    </div>
-    
-    <div class="category">
-      <li> <a href="#">Browse by Category</a></li>
-    </div>
-   </div>
-   <div class="productpics">
-    <div class="images">
-       <a href=""><img src="pics/icon-product-mac.png" alt="Mac"></a> 
-        <img src="pics/icon-product-ipad.png" alt="Mac">
-        <img src="pics/icon-product-iphone.png" alt="Mac">
-        <img src="pics/icon-product-watch.png" alt="Mac">
-        <img src="pics/icon-product-tv.png" alt="Mac">
-    </div>
-   </div>
+ 
    <h1 id="ftiphonesTitle">Featured iPhone Accessories</h1>
    <div class="ftiphones">
     <button class="glider-prev"><i class="fas fa-chevron-circle-left"></i></button>
@@ -226,7 +222,7 @@
          <p> Choose free delivery or pick up <p> available items at an Apple</p> <p> Store.</p></p>
     </div>
     <div class="learn">
-        <li><a href="#">Learn more <i class="fa-solid fa-chevron-right"></i> </a></li>
+        <li><a href="https://www.apple.com/shop/shipping-pickup">Learn more <i class="fa-solid fa-chevron-right"></i> </a></li>
     </div>
         </div>
         <div class="freereturns">
@@ -236,7 +232,7 @@
              <p> Complete your return online or<p>take it to an Apple Store.</p> </p>
         </div>
         <div class="learn">
-            <li><a href="#">Learn more <i class="fa-solid fa-chevron-right"></i> </a></li>
+            <li><a href="https://www.apple.com/shop/browse/account/home">Learn more <i class="fa-solid fa-chevron-right"></i> </a></li>
         </div>
         </div>
         <div class="calendar">
@@ -246,7 +242,7 @@
              <p> And pay over time, intrest-free when you<p>choose to check out with Apple Card Monthly</p> <p> installments.§</p></p>
         </div>
         <div class="learn">
-            <li><a href="#">Learn more <i class="fa-solid fa-chevron-right"></i> </a></li>
+            <li><a href="https://www.apple.com/shop/go/ww/financing">Learn more <i class="fa-solid fa-chevron-right"></i> </a></li>
         </div>
         </div>
     </div>
@@ -265,15 +261,15 @@
     <div class="h2"> <h2>Shop and Learn</h2></div>
     <div class="items">
       <ul>
-        <li><a href="#">Mac</a></li>
-        <li><a href="#">iPad</a></li>
-        <li><a href="#">iPhone</a></li>
-        <li><a href="#">Watch</a></li>
-        <li><a href="#">Airpods</a></li>
-        <li><a href="#">TV & Home</a></li>
-        <li><a href="#">AirTag</a></li>
-        <li><a href="#">Accessories</a></li>
-        <li><a href="#">Gift Cards</a></li>
+        <li><a href="https://www.apple.com/mac/">Mac</a></li>
+        <li><a href="https://www.apple.com/ipad/">iPad</a></li>
+        <li><a href="https://www.apple.com/iphone/">iPhone</a></li>
+        <li><a href="https://www.apple.com/watch/">Watch</a></li>
+        <li><a href="https://www.apple.com/airpods/">Airpods</a></li>
+        <li><a href="https://www.apple.com/tv/">TV & Home</a></li>
+        <li><a href="https://www.apple.com/airtag/">AirTag</a></li>
+        <li><a href="https://www.apple.com/shop/accessories/all">Accessories</a></li>
+        <li><a href="https://www.apple.com/shop/gift-cards">Gift Cards</a></li>
       </ul>
     </div>
   </div>
@@ -281,26 +277,26 @@
     <div class="h2"><h2>Services</h2></div>
     <div class="items">
       <ul>
-        <li><a href="#">Apple Music</a></li>
-        <li><a href="#">Apple TV +</a></li>
-        <li><a href="#">Apple Fitness +</a></li>
-        <li><a href="#">Apple News +</a></li>
-        <li><a href="#">Apple Arcade</a></li>
-        <li><a href="#">iCloud+</a></li>
-        <li><a href="#">Apple One </a></li>
-        <li><a href="#">Apple Card</a></li>
-        <li><a href="#">Apple Books</a></li>
-        <li><a href="#">Apple Podcasts</a></li>
-        <li><a href="#">App Store</a></li>
+        <li><a href="https://www.apple.com/apple-music/">Apple Music</a></li>
+        <li><a href="https://www.apple.com/apple-tv-plus/">Apple TV +</a></li>
+        <li><a href="https://www.apple.com/apple-fitness-plus/">Apple Fitness +</a></li>
+        <li><a href="https://www.apple.com/apple-news/">Apple News +</a></li>
+        <li><a href="https://www.apple.com/apple-arcade/">Apple Arcade</a></li>
+        <li><a href="https://www.apple.com/icloud/">iCloud+</a></li>
+        <li><a href="https://www.apple.com/apple-one/">Apple One </a></li>
+        <li><a href="https://www.apple.com/apple-card/">Apple Card</a></li>
+        <li><a href="https://www.apple.com/apple-books/">Apple Books</a></li>
+        <li><a href="https://www.apple.com/apple-podcasts/">Apple Podcasts</a></li>
+        <li><a href="https://www.apple.com/app-store/">App Store</a></li>
       </ul>
     </div>
     <div class="account">
       <div class="h2"><h2>Account</h2></div>
       <div class="items">
         <ul>
-          <li><a href="#">Manage Your Apple ID</a></li>
-          <li><a href="#">Apple Store Account</a></li>
-          <li><a href="#">iCloud.com</a></li>
+          <li><a href="https://appleid.apple.com/">Manage Your Apple ID</a></li>
+          <li><a href="https://secure.store.apple.com/shop/account/home">Apple Store Account</a></li>
+          <li><a href="https://www.icloud.com/">iCloud.com</a></li>
         </ul>
       </div>
     </div>
@@ -309,16 +305,16 @@
     <div class="h2"><h2>Apple Store</h2></div>
     <div class="items">
       <ul>
-        <li><a href="#">Find a Store</a></li>
-        <li><a href="#">Genius Bar</a></li>
-        <li><a href="#">Today at Apple</a></li>
-        <li><a href="#">Apple Camp</a></li>
-        <li><a href="#">Apple Store App</a></li>
-        <li><a href="#">Refurbished and Clearance</a></li>
-        <li><a href="#">Financing</a></li>
-        <li><a href="#">Apple Trade In</a></li>
-        <li><a href="#">Order Status</a></li>
-        <li><a href="#">Shopping Help</a></li>
+        <li><a href="https://www.apple.com/retail/">Find a Store</a></li>
+        <li><a href="https://www.apple.com/retail/">Genius Bar</a></li>
+        <li><a href="https://www.apple.com/retail/learn/">Today at Apple</a></li>
+        <li><a href="https://www.apple.com/today/camp/">Apple Camp</a></li>
+        <li><a href="https://itunes.apple.com/us/app/apple-store/id375380948?mt=8">Apple Store App</a></li>
+        <li><a href="https://www.apple.com/shop/refurbished">Refurbished and Clearance</a></li>
+        <li><a href="https://www.apple.com/shop/browse/finance/PaypalFinancingLandingPage">Financing</a></li>
+        <li><a href="https://www.apple.com/shop/trade-in">Apple Trade In</a></li>
+        <li><a href="https://secure.store.apple.com/shop/order/list">Order Status</a></li>
+        <li><a href="https://www.apple.com/shop/help">Shopping Help</a></li>
       </ul>
     </div>
   </div>
@@ -328,8 +324,8 @@
     <div class="h2"><h2>For Business</h2></div>
     <div class="items">
       <ul>
-        <li><a href="#">Apple and Business</a></li>
-        <li><a href="#">Shop for Business</a></li>
+        <li><a href="https://www.apple.com/business/">Apple and Business</a></li>
+        <li><a href="https://www.apple.com/retail/business/">Shop for Business</a></li>
       </ul>
     </div>
   </div>
@@ -337,9 +333,9 @@
       <div class="h2"><h2>For Education</h2></div>
       <div class="items">
         <ul>
-          <li><a href="#">Apple and Education</a></li>
-          <li><a href="#">Shop for K-12</a></li>
-          <li><a href="#">Shop for College</a></li>
+          <li><a href="https://www.apple.com/retail/business/">Apple and Education</a></li>
+          <li><a href="https://www.apple.com/education/k12/how-to-buy/">Shop for K-12</a></li>
+          <li><a href="https://www.apple.com/shop/education-pricing">Shop for College</a></li>
         </ul>
       </div>
     </div>
@@ -347,9 +343,9 @@
       <div class="h2"><h2>For Healthcare</h2></div>
       <div class="items">
         <ul>
-          <li><a href="#">Apple in Healthcare</a></li>
-          <li><a href="#">Health on Apple Watch</a></li>
-          <li><a href="#">Health Records on iPhone</a></li>
+          <li><a href="https://www.apple.com/healthcare/">Apple in Healthcare</a></li>
+          <li><a href="https://www.apple.com/healthcare/apple-watch/">Health on Apple Watch</a></li>
+          <li><a href="https://www.apple.com/healthcare/health-records/">Health Records on iPhone</a></li>
         </ul>
       </div>
     </div>
@@ -357,8 +353,8 @@
       <div class="h2"><h2>For Government</h2></div>
       <div class="items">
       <ul>
-        <li><a href="#">Shop for Government </a></li>
-        <li><a href="#">Shop for Veterans and Military</a></li>
+        <li><a href="https://www.apple.com/r/store/government">Shop for Government </a></li>
+        <li><a href="https://www.apple.com/shop/browse/home/veterans_military">Shop for Veterans and Military</a></li>
       </ul>
     </div>
     </div>
@@ -367,26 +363,26 @@
     <div class="h2"><h2>Apple Values</h2></div>
     <div class="items">
       <ul>
-        <li><a href="#">Accessiblity</a></li>
-        <li><a href="#">Education</a></li>
-        <li><a href="#">Environment</a></li>
-        <li><a href="#">Inclusion</a></li>
-        <li><a href="#">Privacy</a></li>
-        <li><a href="#">Racial Equaty and Justice</a></li>
-        <li><a href="#">Supplier Responsibility</a></li>
+        <li><a href="https://www.apple.com/shop/browse/home/veterans_military">Accessiblity</a></li>
+        <li><a href="https://www.apple.com/education/connectED/">Education</a></li>
+        <li><a href="https://www.apple.com/environment/">Environment</a></li>
+        <li><a href="https://www.apple.com/diversity/">Inclusion</a></li>
+        <li><a href="https://www.apple.com/privacy/">Privacy</a></li>
+        <li><a href="https://www.apple.com/racial-equity-justice-initiative/">Racial Equaty and Justice</a></li>
+        <li><a href="https://www.apple.com/supplier-responsibility/">Supplier Responsibility</a></li>
       </ul>
     </div>
     <div class="aboutapple">
       <div class="h2"><h2>About Apple</h2></div>
       <div class="items">
         <ul>
-          <li><a href="">Newsroom</a></li>
-          <li><a href="">Apple Leadership</a></li>
-          <li><a href="">Career Opportunities</a></li>
-          <li><a href="">Investors</a></li>
-          <li><a href="">Ethics & Compliances</a></li>
-          <li><a href="">Events</a></li>
-          <li><a href="">contact Apple</a></li>
+          <li><a href="https://www.apple.com/newsroom/">Newsroom</a></li>
+          <li><a href="https://www.apple.com/leadership/">Apple Leadership</a></li>
+          <li><a href="https://www.apple.com/jobs/us/">Career Opportunities</a></li>
+          <li><a href="https://investor.apple.com/">Investors</a></li>
+          <li><a href="https://www.apple.com/compliance">Ethics & Compliances</a></li>
+          <li><a href="https://www.apple.com/apple-events/">Events</a></li>
+          <li><a href="https://www.apple.com/contact/">contact Apple</a></li>
         </ul>
       </div>
     </div>
@@ -394,21 +390,21 @@
  
 </div>
 <div id="footerparaaa">
-  <p class="footerpara1">More ways to shop: <span> <a href="">Find an Apple Store</a></span><span>or</span><a href=""><span> other retailer</span></a> near you. Or call 1-800-MY-APPLE</p>
+  <p class="footerpara1">More ways to shop: <span> <a href="https://www.apple.com/retail">Find an Apple Store</a></span><span>or</span><a href="https://locate.apple.com/"><span> other retailer</span></a> near you. Or call 1-800-MY-APPLE</p>
 </div>
 <div class="copyright1">
   <div><p id="copyright">Copyright © 2022 Apple Inc. All rights reserved.</p></div>
   <div class="privacy">
     <ul>
-      <li class="privacypolicy"><a href="">Privacy Policy</a></li>
-      <li class="termsofuse"><a href="">Terms of Use</a></li>
+      <li class="privacypolicy"><a href="https://www.apple.com/privacy/privacy-policy">Privacy Policy</a></li>
+      <li class="termsofuse"><a href="https://apple.com/legal/internet-services/terms/site.html">Terms of Use</a></li>
       <li class="salesandrefunds"><a href="">Sales and Refunds</a></li>
-      <li class="legal"><a href="">Legal</a></li>
-      <li class="sitemap"><a href="">Site Map</a></li>
+      <li class="legal"><a href="https://www.apple.com/shop/open/salespolicies">Legal</a></li>
+      <li class="sitemap"><a href="https://www.apple.com/shop/browse/sitemap">Site Map</a></li>
     </ul>
   </div>
   <div class="unitedstates">
-    <ul><li><a href="">United States</a></li></ul>
+    <ul><li><a href="https://www.apple.com/choose-your-country">United States</a></li></ul>
   </div>
 </div>
   </footer>
