--- a/index.html
+++ b/index.html
@@ -72,7 +72,52 @@
         <input type="text" name="searchbar" id="search"   placeholder="search accessories" >
     </div>
    </div>
-
+<div class="browsebuttons">
+<button class="bt-browse">Browse by Product</button>
+<button class="bt-category">Browse by Category</button>
+</div>
+ <div class="productimages">
+  <div class="mac"><a href=""#>
+    <div><img src="pics/icon-product-mac.png" alt="" ></div>
+   </a>
+  </div>
+  <div class="mac"><a href=""#>
+    <div><img src="pics/icon-product-ipad.png" alt=""></div>
+   </a>
+  </div>
+  <div class="mac"><a href=""#>
+    <div><img src="pics/icon-product-iphone.png" alt=""></div>
+    </a>
+  </div>
+  <div class="mac"><a href=""#>
+    <div><img src="pics/icon-product-watch.png" alt=""></div>
+   </a>
+  </div>
+  <div class="mac"><a href=""#>
+    <div><img src="pics/icon-product-tv.png" alt=""></div>
+   </a>
+  </div>
+  <!-- <div class="mac"><a href=""#>
+    <div><img src="pics/icon-product-mac.png" alt=""></div>
+    <div><p>Mac</p></div></a>
+  </div>
+  <div class="mac"><a href=""#>
+    <div><img src="pics/icon-product-mac.png" alt=""></div>
+    <div><p>Mac</p></div></a>
+  </div>
+  <div class="mac"><a href=""#>
+    <div><img src="pics/icon-product-mac.png" alt=""></div>
+    <div><p>Mac</p></div></a>
+  </div>
+  <div class="mac"><a href=""#>
+    <div><img src="pics/icon-product-mac.png" alt=""></div>
+    <div><p>Mac</p></div></a>
+  </div>
+  <div class="mac"><a href=""#>
+    <div><img src="pics/icon-product-mac.png" alt=""></div>
+    <div><p>Mac</p></div></a>
+  </div> -->
+ </div>
  
    <h1 id="ftiphonesTitle">Featured iPhone Accessories</h1>
    <div class="ftiphones">
@@ -408,6 +453,7 @@
   </div>
 </div>
   </footer>
+
 </div>
 <script src="Glider.js-master/glider.min.js"></script>
  <script src="app.js"></script>   
